# studio-desk

./: .gitignore  NOTEBOOKLM_REFERENCE.md  README.md  editor_agent.py  env.template  netlify.toml  pyproject.toml  render.yaml  thumbnailer_agent.py
backend/: band_service.py  main.py  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ArtifactsPanel.jsx  BandRoomFeed.jsx  PipelineSidebar.jsx
frontend/src/pages/: Approval.jsx  Dashboard.jsx  JobDetail.jsx
